--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </style>
     </head>
     <body>
-        <audio id = "bgm1" src="https://yumetanweb.alc.co.jp/audio/2/A01_1_1.mp3"></audio>
+        <!-- <audio id = "bgm1" src="https://yumetanweb.alc.co.jp/audio/2/A01_1_1.mp3"></audio> -->
         <button id="btn-play" type="button"><i class="fas fa-play"></i></button>
 
         <script>
@@ -31,22 +31,24 @@
 
             btn.addEventListener("click", () => {
                 // pausedがtrue=>停止, false=>再生中
-                if (!bgm1.paused) {
-                    btn.innerHTML = '<i class="fas fa-play"></i>'; // 「再生ボタン」に切り替え
-                    bgm1.pause();
-                } else {
-                    btn.innerHTML = '<i class="fas fa-pause"></i>'; // 「一時停止ボタン」に切り替え
-                    bgm1.play();
-                }
+                // if (!bgm1.paused) {
+                //     btn.innerHTML = '<i class="fas fa-play"></i>'; // 「再生ボタン」に切り替え
+                //     bgm1.pause();
+                // } else {
+                //     btn.innerHTML = '<i class="fas fa-pause"></i>'; // 「一時停止ボタン」に切り替え
+                //     bgm1.play();
+                // }
+                var music = new Audio("https://yumetanweb.alc.co.jp/audio/2/A01_1_1.mp3");
+                music.play();
             });
 
             /**
              * [event] 再生終了時に実行
-             */
-            bgm1.addEventListener("ended", () => {
-                bgm1.currentTime = 0; // 再生位置を先頭に移動(こいつはなくても大丈夫です)
-                btn.innerHTML = '<i class="fas fa-play"></i>'; // 「再生ボタン」に変更
-            });
+            //  */
+            // bgm1.addEventListener("ended", () => {
+            //     bgm1.currentTime = 0; // 再生位置を先頭に移動(こいつはなくても大丈夫です)
+            //     btn.innerHTML = '<i class="fas fa-play"></i>'; // 「再生ボタン」に変更
+            // });
         </script>
     </body>
 </html>
